--- a/app/views/companys/index.html.erb
+++ b/app/views/companys/index.html.erb
@@ -2,6 +2,11 @@
 <% @companys.each do | company| %>
   <li>
   	<h5><%= link_to "#{sanitize company.name}", :controller => 'companys', :action => 'show', :id => company.id %></h5>
+    <p>
+      <% company.jobs.each do |job| %>
+        <span><%= job.name %></span>
+      <% end %>
+    </p>
   </li>
 <% end %>
 </ul>
