--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -5,19 +5,22 @@
 
 <div class="row" style="margin-left:0px;margin-top: 16px;">
   <%= render 'navbar' %>
-  <div class="span6" style="margin-left: 0px">
+  <div style="margin-left: 0px">
     <ul>
       <% @jobs.each do |job| %>
         <li>
           <h5><%= link_to :controller => 'jobs', 
               :action => 'show', :id => job.id do %>
                 <% if params[:search_txt] %>
-                  <%=raw job.name.gsub(/#{params[:search_txt]}/, "<span style='color:#fff;background:yellow'>#{params[:search_txt]}</span>") %>
+                  <%=raw job.name.gsub(/#{params[:search_txt]}/im, "<span style='color:#fff;background:yellow'>#{params[:search_txt]}</span>") %>
                 <% else %>  
                   <%= sanitize job.name %>
                 <% end %>
               <% end %>
           </h5>
+          <p>
+            <%= params[:search_txt] ? hight_light(job.description, params[:search_txt]) : (sanitize job.description) %>
+          </p>
           <span><%= sanitize job.company.name %></span>
         </li>
       <% end %>
@@ -25,17 +28,6 @@
     <p><%= paginate @jobs %></p>
   </div>
 
-  <div class="span3 bs-docs-sidebar" style="float: right">
-    <h4>热门职位</h4>
-    <ul class="nav nav-list bs-docs-sidenav">
-      <% @top_jobs.each do |job| %>
-        <li>
-          <a href="<%= "/jobs/#{job.id}" %>"><%=sanitize job.name %><i class="icon-chevron-right"></i></a>
-        </li>
-      <% end %>
-    </ul>
-  </div>
-  
 </div>
 
   
