--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -3,6 +3,8 @@
   </style>
 <% end %>
 
+<% content_for :title do %>职位搜索<% end %>
+
 <div class="row" style="margin-left:0px;margin-top: 16px;">
   <%= render 'navbar' %>
   <div style="margin-left: 0px">
