--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -3,6 +3,8 @@
   </style>
 <% end %>
 
+<% title "最新职位" %>
+
 <div class="row" style="margin-left:0px;margin-top: 16px;">
 
   <div class="span6" style="margin-left: 0px">
@@ -14,6 +16,8 @@
                   <%= sanitize job.name %>
               <% end %>
           </h5>
+          <p><%= job.updated_at.to_s(:updated_time) %></p>
+          <p>创建于：<%= job.created_at.to_s(:db) %></p>
           <p><%= job.description %></p>
           <span><%= sanitize job.company.name %></span>
         </li>
