--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>qzrc</title>
+  <title><%= yield(:title) || 'qzjob' %> - qzjob</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -52,10 +52,10 @@
               >
               <%= link_to "企业", companys_path %></li>
           </ul>
-          <span>欢迎您，<%= flash[:notice] || session[:nickname] %><span>
+          <span>欢迎您，<%= session[:nickname] %><span>
           <span>
             <% if session[:nickname] %>
-              <a href="/session/destroy">退出</a>
+              <a href="/logout">退出</a>
             <% end %>  
           </span>  
           <form class="navbar-form pull-right form-search" style="margin-right: 15px;" action="/search/">
@@ -68,6 +68,8 @@
         <!--/.nav-collapse --> </div>
     </div>
   </div>
+
+  <p><%= flash[:notice] %></p>
 
   <div class="container">
 
