--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,16 @@
 </table>
 
 <br>
-
+<%= jobs_path %>
+<br>
+<%= link_to "abc", job_path(1) %>
+<br>
+<%= job_path(1) %>
+<br>
+<%= job_archive_path(2012,10)%>
+<br>
+<%= job_archive_path(:year => 2012,:month => 10)%>
+<br>
 <%= @remote_ip %>
 
 <% 
