--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,6 +56,7 @@
           <span>
             <% if session[:nickname] %>
               <a href="/logout">退出</a>
+              <%= link_to "退出", logout_path %>
             <% end %>  
           </span>  
           <form class="navbar-form pull-right form-search" style="margin-right: 15px;" action="/search/">
