--- a/app/views/identities/new.html.erb
+++ b/app/views/identities/new.html.erb
@@ -1,4 +1,6 @@
-<h1>New Account</h1>
+<% title "注册" %>
+
+<h1>注册</h1>
 
 <%= form_tag "/auth/identity/register" do %>
   <% if @identity && @identity.errors.any? %>
