--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -5,6 +5,10 @@
 
 <% title "最新职位" %>
 
+<div>
+  <%= link_to "RSS Feed", jobs_path(:rss) %>
+</div>
+
 <div class="row" style="margin-left:0px;margin-top: 16px;">
 
   <div class="span6" style="margin-left: 0px">
